@@ -7,16 +7,20 @@ import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
     int historyLength =10;
-    private List<Task> history = new ArrayList<>(historyLength);
+    private final List<Task> history = new ArrayList<>(historyLength);
 
     @Override
     public void add(Task task) {
-        if (!(history.size() < historyLength)){ history.remove(0);}
+        if (task.equals(null)){return;}
+        if (history.size() >= historyLength){ history.removeFirst();}
         history.add(task);
     }
 
     @Override
     public List<Task> getAllHistory() {
-        return history;
+     //   return history;
+        ArrayList<Task> historyCopy = new ArrayList<>();
+        historyCopy = (ArrayList<Task>) history;
+        return historyCopy;
     }
 }
